fix a couple of bugs, blog preview cards now go into grid properly and image overlay close button is now visible

--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,12 @@
     background-color: rgba(180, 180, 180, 0.8);
     height: 100vh;
     width: 100vw;
+    padding-top: 70px;
     text-align: end;
 }
 
 .fixedOverlay i {
-    margin: 20px;
+    margin: 20px 50px 20px 0;
     color: white;
     opacity: 0.8;
     cursor: pointer;
